<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".DetallesPoke">

    <ImageView
        android:id="@+id/sprite"
        android:layout_width="229dp"
        android:layout_height="232dp"
        app:layout_constraintBottom_toTopOf="@+id/mensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ayuda_psyduck"
        android:contentDescription="@string/content_detalles_sprite" />

    <TextView
        android:id="@+id/mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/sombra_texto"
        android:paddingBottom="2dp"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="15"
        android:textAlignment="center"
        android:textColor="@color/rojo"
        android:textSize="40sp"
        android:text="@string/ayuda"
        app:layout_constraintBottom_toTopOf="@id/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sprite" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/sombra_texto"
        android:paddingBottom="2dp"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="15"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/descripcion"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sprite2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/mensaje2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcion"
        android:src="@drawable/pokeball"
        android:contentDescription="@string/content_detalles_sprite" />

    <TextView
        android:id="@+id/mensaje2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:shadowColor="@color/sombra_texto"
        android:paddingBottom="2dp"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="15"
        android:text="@string/mensaje2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <TextView
        android:id="@+id/creditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/rojo"
        android:textSize="20sp"
        android:shadowColor="@color/sombra_texto"
        android:paddingBottom="2dp"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="15"
        android:text="@string/creditos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensaje2" />


    <Button
        android:id="@+id/atras"
        android:layout_width="82dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@drawable/flecha"
        android:backgroundTint="@color/white"
        android:rotationY="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>