<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStart="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/logo"
                        android:src="@drawable/pokedex_logo" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/numeros"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn1"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="I"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn2"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="II"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn3"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="III"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn4"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="IV"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn5"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="V"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn6"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="VI"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn7"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:text="VII"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/random"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/menu"
        android:background="@drawable/media_pokeball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ayuda"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/ayuda"
        android:src="@drawable/help"
        android:rotation="15"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>